[workspace]
resolver = "2"
members = [
    "crates/content-id",
    "crates/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Codio Collective"]
license = "MIT"

[workspace.dependencies]
sha2 = "0.10"
bs58 = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
