[package]
name = "codio-cdn"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codio-cdn"
path = "src/main.rs"

[dependencies]
codio-common = { path = "../common" }
codio-content-id = { path = "../content-id" }
codio-dht = { path = "../dht" }

clap = { version = "4.4", features = ["derive"] }
tokio.workspace = true
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
