[package]
name = "codio-chunk"
version.workspace = true
edition.workspace = true

[dependencies]
codio-content-id = { path = "../content-id" }
codio-common = { path = "../common" }
codio-dht = { path = "../dht" }

tokio.workspace = true
serde.workspace = true
anyhow = "1.0"
tracing = "0.1"
sha2.workspace = true
futures = "0.3"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
