[package]
name = "codio-content"
version = "0.1.0"
edition = "2021"
authors = ["Codio Collective"]
license = "MIT"
description = "IPFS-style content addressing with chunking and Merkle DAG support"

[dependencies]
sha2 = "0.10"
bs58 = "0.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0"
