[package]
name = "codio-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codio-gateway"
path = "src/main.rs"

[dependencies]
codio-content-id = { path = "../content-id" }
codio-common = { path = "../common" }
codio-dht = { path = "../dht" }

axum = { version = "0.7", features = ["multipart"] }
tokio.workspace = true
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde.workspace = true
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
mime_guess = "2.0"
lru = "0.12"
bytes = "1.5"
infer = "0.15"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
