[package]
name = "codio-tracker"
version.workspace = true
edition.workspace = true

[dependencies]
codio-content-id = { path = "../content-id" }
codio-common = { path = "../common" }
tokio = { workspace = true }
anyhow = "1.0"
tracing = "0.1"
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "time"] }
