[package]
name = "codio-dht"
version.workspace = true
edition.workspace = true

[dependencies]
codio-common = { path = "../common" }
codio-content-id = { path = "../content-id" }

libp2p = { version = "0.53", features = [
    "kad",
    "tcp",
    "noise",
    "yamux",
    "tokio",
] }
tokio.workspace = true
serde.workspace = true
tracing = "0.1"
anyhow = "1.0"
futures = "0.3"
bs58.workspace = true
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
